first commit - done hero section and header - test header with grid

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                   </p>
                   <section class="hero__info--cta">
                      <div class="btn hero__info--btn">Book Online</div>
-                     <strong class="hero__info-contact">or call (123) 456-7890</strong>
+                     <strong class="hero__info-contact"
+                        >or call (123) 456-7890</strong
+                     >
                   </section>
                </div>
                <div class="hero__image">
